--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.9",
+    "@mui/x-date-pickers": "^5.0.19",
     "firebase": "^9.17.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
