--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.19",
+    "dayjs": "^1.11.7",
     "firebase": "^9.17.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
